cabal-version:        2.4
name:                 ddb
version:              0.1.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               delivery group | earnestresearch.com
maintainer:           mlee@earnestresearch.com
category:             aws
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    App
                    , Db.Db
                    , Db.Log
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedLabels
                    , OverloadedStrings
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
                    , TypeSynonymInstances
  build-depends:      base ^>=4.12.0.0
                    , aeson
                    , attoparsec
                    , beam-core
                    , beam-migrate
                    , beam-postgres
                    , case-insensitive
                    , co-log-polysemy
                    , conduit
                    , containers
                    , bytestring
                    , either
                    , errors
                    , free
                    , generic-lens
                    , http-client
                    , http-media
                    , http-types
                    , polysemy
                    , polysemy-plugin
                    , postgresql-simple-migration
                    , servant
                    , servant-client
                    , servant-client-core
                    , split
                    , text
                    , text-conversions
                    , time
                    , unordered-containers
                    , uuid

executable ddb
  main-is:          ddb.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -O2 -flate-specialise -fspecialise-aggressively
  if os(linux)
    ld-options:     -static -pthread
  default-language: Haskell2010
  build-depends:    base ^>=4.12.0.0
                  , ddb
