cabal-version:        3.0
name:                 ddb
version:              0.1.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               M. Lee
maintainer:           metaml@gmail.com
category:             application
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    App
                    , Db.Db
                    , Db.Log
                    , Db.Query
                    , Web.Server
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedLabels
                    , OverloadedStrings
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
                    , TypeSynonymInstances
  build-depends:      base ^>= 4.13.0.0
                    , aeson
                    , attoparsec
                    , case-insensitive
                    , co-log-polysemy
                    , conduit
                    , containers
                    , bytestring
                    , either
                    , errors
                    , free
                    , generic-lens
                    , http-client
                    , http-media
                    , http-types
                    , polysemy
                    , polysemy-plugin
                    , postgresql-simple-migration
                    , selda
                    , selda-json
                    , selda-postgresql
                    , servant
                    , servant-client
                    , servant-client-core
                    , servant-server
                    , split
                    , text
                    , text-conversions
                    , text-manipulate
                    , time
                    , unordered-containers
                    , uuid
                    , wai
                    , warp

executable ddb
  main-is:          ddb.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  build-depends:    base ^>=4.13.0.0
                  , ddb
